--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,7 +16,10 @@
         "titleBar.activeBackground": "#575f5b",
         "titleBar.activeForeground": "#e7e7e7",
         "titleBar.inactiveBackground": "#575f5b99",
-        "titleBar.inactiveForeground": "#e7e7e799"
+        "titleBar.inactiveForeground": "#e7e7e799",
+        "sideBar.border": "#6f7a74",
+        "statusBar.border": "#575f5b",
+        "titleBar.border": "#575f5b"
     },
     "peacock.color": "#575f5b"
 }
